<resources>
    <string name="facebook_app_id">1137795293459662</string>
    <string name="facebook_client_token">8fb1cb520f3db69d95df1a551c8387ac</string>
    <string name="server_client_id">AIzaSyCXPA_YcuZDP1zqBH2ebKW1IiAefUMebBE</string>
    <string name="email">Email</string>
    <string name="public_room">Public Room</string>
    <string name="filter">Filter</string>
    <string name="private_room">Private Room</string>
    <string name="create_room">Create Room</string>
    <string name="category">Category</string>
    <string name="start_time">Start Time</string>
    <string name="sort_by">Sort by</string>
    <string name="free_on_my_calendar">Free on my calendar</string>
    <string-array name="duration">
        <item>Select Duration Hours</item>
        <item>0.5</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>3.5</item>
        <item>5</item>
        <item>5.5</item>
        <item>6</item>
        <item>6.5</item>
    </string-array>
    <string name="room_name">Room Name</string>
    <string name="invite_friend_by_email">Invite Friend by Email</string>
    <string name="date">Date</string>
    <string name="invite">Invite</string>
    <string name="friend_public_room">Friend\'Public Room </string>
    <string name="upcoming_room">Upcoming Room</string>
    <string name="add_date">Add Date</string>
    <string name="add_friend">Add Friend</string>
    <string name="did_user">Did this User exhibited racist behaviour after asked to stop?</string>
    <string name="match_more">Match More</string>
    <string name="match_less">Match Less</string>
    <string name="match_never">Match Never</string>
    <string name="vote_to_kick">Vote to Kick</string>
    <string name="invite_friend">Invite Friends</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="accept">Accept</string>
    <string name="accept_request">Accept Request</string>
    <string name="reject_request">Reject Request</string>
    <string name="join">Join</string>
    <string name="reject">Reject</string>
    <string name="submit">Submit</string>
    <string name="upload_image">Upload Image</string>
    <string name="sign_out">Sign Out</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="enter_password">Please enter password</string>
    <string name="invalid_password">Password length should be between 6 to 20 characters</string>
    <string name="ok">OK</string>
    <string name="home">Home</string>
    <string name="view_profile">View Profile</string>
    <string name="vote_to_remove">Vote to Remove</string>
    <string name="friend_list">Friend List</string>
    <string name="graph">Graph</string>
    <string name="alarm">Alarm</string>
    <string name="music">Music</string>
    <string name="version">Version</string>
    <string name="post_request">Post Request</string>
    <string name="search">Search</string>
    <string name="search_for_chat_room">Search for Chat Room</string>
    <string name="the_lord_of_the_rings">The Lord of the Rings</string>
    <string name="email_for_invite_friend">Email for Invite Friends</string>
    <string name="write_something_about">Write Something About Chat Room</string>
    <string name="chat">Chat</string>
    <string name="message">Message</string>
    <string name="celendar">Calendar</string>
    <string name="profile">Profile</string>
    <string-array name="menu_array">
        <item>All</item>
        <item>Movies</item>
        <item>TVShows</item>
        <item>BookShows</item>
        
    </string-array>
    <string-array name="sort_array">
        <item>Alphabetical(A-Z)</item>
        <item>Earliest to Latest</item>
        <item>Latest to Earilest</item>
        <item>Popularity</item>
        
    </string-array>
    <string-array name="search_type">
        <item>Chat Room</item>
        <item>Watch Party</item>
        <item>People</item>
        
    </string-array>
    <string-array name="time_array">
        <item>12AM</item>
        <item>12:30AM</item>
        <item>1AM</item>
        <item>01:30AM</item>
        <item>2AM</item>
        <item>02:30AM</item>
        <item>3AM</item>
        <item>03:30AM</item>
        <item>4AM</item>
        <item>04:30AM</item>
        <item>5AM</item>
        <item>05:30AM</item>
        <item>6AM</item>
        <item>06:30AM</item>
        <item>7AM</item>
        <item>07:30AM</item>
        <item>8AM</item>
        <item>08:30AM</item>
        <item>9AM</item>
        <item>09:30AM</item>
        <item>10AM</item>
        <item>10:30AM</item>
        <item>11AM</item>
        <item>11:30AM</item>
        <item>12PM</item>
        <item>12:30PM</item>
        <item>1PM</item>
        <item>01:30PM</item>
        <item>2PM</item>
        <item>02:30PM</item>
        <item>3PM</item>
        <item>03:30PM</item>
        <item>4PM</item>
        <item>04:30PM</item>
        <item>5PM</item>
        <item>05:30PM</item>
        <item>6PM</item>
        <item>06:30PM</item>
        <item>7PM</item>
        <item>07:30PM</item>
        <item>8PM</item>
        <item>08:30PM</item>
        <item>9PM</item>
        <item>09:30PM</item>
        <item>10PM</item>
        <item>10:30PM</item>
        <item>11PM</item>
        <item>11:30PM</item>

    </string-array>
    <string name="server_taking_too_long_to_respond">Server is taking too long to respond OR something is wrong with your internet connection. Please try again later.</string>
    <string name="unable_to_connect">Unable to connect with server</string>
    <string name="please_wait">Please wait...</string>
    <string name="get_request">Get Request</string>
    <string name="db_retrieve">Get data from DB</string>
    <string name="delete_record_from_db">Delete record from DB</string>
    <string name="no_record_found">No record found</string>
    <string name="list_items">List Items</string>
    <string name="back">Back</string>
    <string-array name="home_tab_items_name">
        <item>@string/home</item>
        <item>@string/graph</item>
        <item>@string/alarm</item>
        <item>@string/music</item>
        <item>@string/version</item>
    </string-array>
    <string-array name="new_duration">
        <item>Select Duration Hours</item>
        <item>30 min</item>
        <item>1 hour</item>
        <item>1.5 hours</item>
        <item>2 hours</item>
        <item>2.5 hours</item>
        <item>3 hours</item>
        <item>3.5 hours</item>
        <item>5 hours</item>
        <item>5.5 hours</item>
        <item>6 hours</item>
        <item>6.5 hours</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="internet_connected">Good! Connected to Internet</string>
    <string name="internet_not_connected">Sorry! Not connected to internet</string>
    <string name="menu">Menu</string>
    <string name="hello_user">Hello User</string>
    <string name="create_an_account">Create an account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">Username</string>
    <string name="email_or_phone_number">Email/PhoneNumber</string>
    <string name="sign_in_with">Sign in with:</string>
    <string name="register">Register</string>
    <string name="or">Or</string>
    <string name="let_get_you_setup">Let\'s get you setup!</string>
    <string name="what_is_your_first_name_last_name_email_phone_number">What is your first name, last name, email and phone number?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="contiune">Continue</string>
    <string name="finish">Finish</string>
    <string name="allow">Allow</string>
    <string name="skip">Skip</string>
    <string name="when_is_your_birthday">When is your birthday?</string>
    <string name="birthday">Birthday</string>
    <string name="visible_to_all">Visible to All</string>
    <string name="visible_to_friends_only">Visible to Friends Only</string>
    <string name="how_you_identify_yourself">How do you identify yourself?</string>
    <string name="are_you_interested_in_dating">Are you Interested in dating?</string>
    <string name="i_identify_as">I Identify as...</string>
    <string name="male">Male</string>
    <string name="open">(</string>
    <string name="user">User</string>
    <string name="close">)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="has_send_you_a_friend_request">has sent you a friend request.</string>
    <string name="invite_you_to_a_private_room">invited you to a private room.</string>
    <string name="transgender_female">Transgender Female</string>
    <string name="transgender_male">Transgender Male</string>
    <string name="gender_variant">Gender Variant/Non-Conforming</string>
    <string name="not_listed">Not Listed</string>
    <string name="prefer_not_to_answer">Prefer Not to Answer</string>
    <string name="where_is_your_hometown">Where is your Hometown?</string>
    <string name="hometown">Hometown</string>
    <string name="age">Age</string>
    <string name="what_is_your_favorite_drink">What is your favorite drink?</string>
    <string name="update_profile_picture">Update Profile picture</string>
    <string name="select_drink">Select Drink</string>
    <string name="allow_chafte_to_send_you_notification">Allow Chafte to send you notification.</string>
    <string name="thanks_for_joining">Thanks for joining!</string>
    <string name="your_profile_is_set_up">Your profile is all set up!</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from gallery</string>
    <string name="cancel">cancel</string>
    <string name="send_code_to">Send code to</string>
    <string name="send_code">Send Code</string>
    <string name="enter_code">Enter code</string>
    <string name="resend_code">Resend Code</string>
    <string name="submit_code">Submit Code</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_pasword">Confirm New Pasword</string>
    <string name="password_successfully_changed">Password Successfully Changed</string>
    <string name="chat_room">Chat Room</string>
    <string name="about">About</string>
    <string name="drink">Drink</string>
    <string name="friend">Friends</string>
    <string name="request_sent">Requested</string>
    <string name="accept_reject">Respond</string>
    <string name="unfriend">Unfriend</string>
    <string name="block">block</string>
    <string name="image">image</string>
    <string name="message_text">message</string>
    <string name="start_messaging_to_begin_your_conversation">Start messaging to begin your conversation.</string>
    <string name="choose_friend">Invite Friends</string>
    <string name="blocklist_user">BlockList User</string>
    <string name="select_friend">Selected</string>
    <string name="view_all">View All</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="resents">Recent</string>
    <string name="recent_connections">Recent Connections</string>
    <string name="watch_party">Watch Party</string>
</resources>