<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.sdei.chafte.R" />
        <import type="android.view.View" />
        <variable
            name="sVM"
            type="com.sdei.chafte.utils.base.BaseVM"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.home.event_detail.EventDetailsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clLayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageView
                android:id="@+id/imgCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cancel"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/txHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friend"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgCancel"
                app:layout_constraintBottom_toBottomOf="@+id/imgCancel"
                android:layout_marginLeft="@dimen/_20sdp"
                app:layout_constraintStart_toEndOf="@+id/imgCancel"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/clLayer">

            <TextView
                android:id="@+id/txPublic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unfriend"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"
                android:drawablePadding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableTint="@color/light_divider"
                android:drawableLeft="@drawable/ic_unfriend"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="@dimen/_20sdp"
                />
            <TextView
                android:id="@+id/txPrivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/block"
                android:textSize="@dimen/_16sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:drawableTint="@color/light_divider"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_14sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableLeft="@drawable/ic_block"
                app:layout_constraintTop_toBottomOf="@+id/txPublic"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="@dimen/_20sdp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>